--- a/src/app.css
+++ b/src/app.css
@@ -1,36 +1,3 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -58,12 +25,64 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.counter-box {
+  margin: 0 auto;
+  margin-bottom: 10px;
+  width: 400px;
+  border: 1px solid #bfbfbf;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+.counterAdd {
+  background-color: #bfbfbf;
+  margin-bottom: 10px;
+}
+
+.counterAdd:hover {
+  background-color: #ffffff;
+}
+
+.minus-button {
+  background-color: #bfbfbf;
+}
+
+.minus-button:hover {
+  background-color: #ff2f4a;
+}
+
+.plus-button {
+  background-color: #bfbfbf;
+}
+
+.plus-button:hover {
+  background-color: #2f8dff;
+}
+
+.reset-button {
+  background-color: #bfbfbf;
+}
+
+.reset-button:hover {
+  background-color: #2fff44;
+}
+
+.del-button {
+  background-color: #bfbfbf;
+}
+
+.del-button:hover {
+  background-color: #ff0000;
+}
+
+.title-form {
+  margin-bottom: 10px;
 }
 
 @media (prefers-color-scheme: light) {
